--- a/SimpleTable/Base.lproj/Main.storyboard
+++ b/SimpleTable/Base.lproj/Main.storyboard
@@ -39,6 +39,10 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="nxd-4R-dv8"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Aiu-Kp-BlA"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
